--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "KZYSAKYM",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ENV=DEV electron main.js",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -20,6 +20,8 @@
     "@nuxt/typescript-build": "^0.5.6",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
+    "cross-env": "^7.0.0",
+    "electron": "^8.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.1.0",
